eks-poc/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banaras-frontend
  labels:
    app: banaras-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banaras-frontend
  template:
    metadata:
      labels:
        app: banaras-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/raghvdevops/banaras_dairy-frontend:latest
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "150Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: banaras-frontend-svc
spec:
  selector:
    app: banaras-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
